# CQL

./: .appveyor.yml  .travis.yml  CMakeLists.txt  CQL.sln  README.md  appveyor.yml
CQL/: CQL.hpp  CQL.vcxproj  CQL.vcxproj.filters
CQL/CQL/: Custom.hpp  Serialize.hpp
Tests/: IntSet.cpp  Point.cpp  Point.h  Serialize.cpp  SimpleUser.cpp  SimpleUser.hpp  StringIntTuple.cpp  Tests.vcxproj  Tests.vcxproj.filters
